tomcat/tomcat/templates/deployment.yaml
---
# Source: tomcat/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tomcat
  namespace: default
  labels:
    app.kubernetes.io/name: tomcat
    helm.sh/chart: tomcat-10.3.11
    app.kubernetes.io/instance: tomcat
    app.kubernetes.io/managed-by: Helm
  annotations:
    prometheus.io/scrape: "true"
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: tomcat
      app.kubernetes.io/instance: tomcat
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: tomcat
        helm.sh/chart: tomcat-10.3.11
        app.kubernetes.io/instance: tomcat
        app.kubernetes.io/managed-by: Helm
      annotations:
        prometheus.io/scrape: "true"
    spec:
      
      affinity:
        podAffinity:
          
        podAntiAffinity:
          
        nodeAffinity:
          
      securityContext:
        fsGroup: 1001
      containers:
        - name: tomcat
          image: docker.io/library/tomcat:10.0.21
          imagePullPolicy: "IfNotPresent"
          securityContext:
            runAsNonRoot: true
            runAsUser: 1001
          ports:
            - name: http
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: http
            failureThreshold: 6
            initialDelaySeconds: 120
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /
              port: http
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 3
          resources:
            limits:
              cpu: "1"
              memory: 2Gi
            requests:
              cpu: 300m
              memory: 512Mi
          volumeMounts:
            - name: data
              mountPath: /bitnami/tomcat
            - mountPath: /usr/local/tomcat/webapps
              name: shared-volume
            - mountPath: /usr/share/tomcat
              name: shared-volume-lib
      volumes:
        - name: data
          emptyDir: {}
        - emptyDir: {}
          name: shared-volume
        - emptyDir: {}
          name: shared-volume-lib
