tomcat/tomcat/templates/svc.yaml
---
# Source: tomcat/templates/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: tomcat
  namespace: default
  labels:
    app.kubernetes.io/name: tomcat
    helm.sh/chart: tomcat-10.3.11
    app.kubernetes.io/instance: tomcat
    app.kubernetes.io/managed-by: Helm
  annotations:
    prometheus.io/scrape: "true"
spec:
  type: NodePort
  externalTrafficPolicy: "Cluster"
  sessionAffinity: None
  ports:
    - name: http
      port: 80
      targetPort: http
  selector: 
    app.kubernetes.io/name: tomcat
    app.kubernetes.io/instance: tomcat
