tomcat/tomcat/templates/ingress.yaml
---
# Source: tomcat/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tomcat
  namespace: default
  labels:
    app.kubernetes.io/name: tomcat
    helm.sh/chart: tomcat-10.3.11
    app.kubernetes.io/instance: tomcat
    app.kubernetes.io/managed-by: Helm
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    prometheus.io/scrape: "true"
spec:
  rules:
    - host: haptest.info
      http:
        paths:
          - path: /app(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: tomcat
                port:
                  name: http
